# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-f7e937e827168bddc7f0da8f89cc9101fdda07bf599547637a6891ce727d4eeb.json
configuration/: base.yaml  production.yaml
migrations/: 20240302093435_create_subscriptions_table.down.sql  20240302093435_create_subscriptions_table.up.sql  20240304124703_add_status_to_subscriptions.up.sql  20240304125101_make_status_not_null_in_subscriptions.down.sql  20240304125101_make_status_not_null_in_subscriptions.up.sql  20240304125548_create_subscription_tokens_table.down.sql  20240304125548_create_subscription_tokens_table.up.sql  20240305125901_create_users_table.up.sql  20240305131712_rename_password_column.down.sql  20240305131712_rename_password_column.up.sql  20240306103005_seed_user.down.sql  20240306103005_seed_user.up.sql  20240306161703_create_idempotency_table.down.sql  20240306161703_create_idempotency_table.up.sql  20240306171828_relax_null_checks_on_idempotency.down.sql  20240306171828_relax_null_checks_on_idempotency.up.sql  20240306182152_create_newsletter_issues_table.down.sql  20240306182152_create_newsletter_issues_table.up.sql  20240306182806_create_issue_delivery_queue_table.down.sql  20240306182806_create_issue_delivery_queue_table.up.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: mod.rs  newsletter.rs  subscirptions.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscribtions.rs  subscriptions_confirm.rs
