[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
chrono = "0.4.34"
config = "0.14.0"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.3", default-features = false, features = ["runtime-tokio", "tls-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
uuid = { version = "1.7.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["macros"] }
reqwest = "0.11.24"
