[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.9.0", features = ["redis-rs-tls-session"] }
actix-web = "4.5.1"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
anyhow = "1.0.80"
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.0"
chrono = "0.4.34"
config = "0.14.0"
htmlescape = "0.3.1"
rand = { version = "0.8.5", features = ["std_rng"] }
reqwest = { version = "0.11.24", features = ["json", "rustls-tls", "cookies"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde-aux = "4.5.0"
sqlx = { version = "0.7.3", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
thiserror = "1.0.57"
tokio = "1.36.0"
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.9"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
unicode-segmentation = "1.11.0"
urlencoding = "2.1.3"
uuid = { version = "1.7.0", features = ["v4"] }
validator = "0.16.1"

[dev-dependencies]
claim = "0.5.0"
fake = "2.9.2"
linkify = "0.10.0"
once_cell = "1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt", "macros"] }
wiremock = "0.6.0"

